<resources>
    <string name="app_name">MapasGoogle</string>
    <string name="title_activity_maps">Map</string>

    <string name="btn_marcadores">Marcadores</string>
    <string name="btn_tipos_mapas">Tipos de mapas</string>
    <string name="btn_mi_ubicacion">Mi ubicacion</string>

    <string name="marker_detail_latlng">(%1$.2f, %2$.2f)</string>
    <string name="mensaje">Este es el portal de Suba, queda ubicado en Suba y alli va la gente que se transporta en transmilenio.</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps3">Map</string>

    <string name="btn_mapa_hibrido">Hibrido</string>
    <string name="btn_mapa_satelital">Satelital</string>
    <string name="btn_mapa_terreno">Terreno</string>
    <string name="btn_mapa_normal">Normal</string>
</resources>
