<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_marcadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_marcadores"/>

    <Button
        android:id="@+id/btn_tipo_mapas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tipos_mapas"/>

    <Button
        android:id="@+id/btn_mi_ubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_mi_ubicacion"/>

</LinearLayout>